--- a/index.css
+++ b/index.css
@@ -1,4 +1,44 @@
+
+
+/*CUSTOM CSS*/
+
+html {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1em;
+	color: #5a6175;
+	background: url(background.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
+}
+ 
+h1 {
+	font-size: 2.074em;
+	margin-bottom: 0;
+}
+
+h2 { font-size: 1.728em; }
+h3 { font-size: 1.44em; }
+h4 { font-size: 1.2em; }
+small { font-size: 0.833em; }
+
+.line-space {
+  line-height: 1.7;
+}
+
+input[type=text] {
+  padding: .5rem 2rem;
+  width: 20rem;
+  margin: 1rem 1rem 3rem;
+  border-top: none;
+  border-right: none;
+  border-left:none;
+  border-bottom: solid 1px #979797;
+}
+
 body {
+    margin-top: 3%;
     margin-right: 20%;
     margin-left: 20%;
 }
@@ -7,4 +47,31 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+button {
+  border-radius: 5px;
+  background-color: #54c2bb;
+  padding: 1rem 3rem;
+  letter-spacing: 0.7px;
+  color: #ffffff;
+  font-size: 1.025em;
+  border:none;
+  text-transform: uppercase;
+}
+
+#control {
+	height: 45%;
+	width: 45%;
+	padding: none;
+}
+
+.white-bg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 3px;
+  background-color: #ffffff;
+  margin-top: 2%;
+  padding: 1% 4% 3%;
 }
