--- a/index.css
+++ b/index.css
@@ -10,12 +10,12 @@ html {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center; 
+    background-position: center;
 }
- 
+
 h1 {
 	font-size: 2.074em;
-	margin-bottom: 0;
+	/*margin-bottom: 0;*/
 }
 
 h2 { font-size: 1.728em; }
@@ -61,8 +61,8 @@ button {
 }
 
 #control {
-	height: 45%;
-	width: 45%;
+	height: 30%;
+	width: 30%;
 	padding: none;
 }
 
@@ -75,3 +75,43 @@ button {
   margin-top: 2%;
   padding: 1% 4% 3%;
 }
+
+/*Collapsible*/
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
