--- a/index.css
+++ b/index.css
@@ -76,6 +76,40 @@ button {
   padding: 1% 4% 3%;
 }
 
+
+
+/*RESPONSIVE SCREENS*/
+
+/*// Small devices (landscape phones, 576px and up)*/
+@media (max-width: 576px) { 
+
+  html {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.2em;
+  color: #5a6175;
+  background: url(background.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+  }
+
+  h1 {
+    font-size: 3em;
+    /*margin-bottom: 0;*/
+  }
+
+}
+
+/*// Medium devices (tablets, 768px and up)*/
+@media (max-width: 768px) { ... }
+
+/*// Large devices (desktops, 992px and up)*/
+@media (max-width: 992px) { ... }
+
+/*// Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { ... }
+
 /*Collapsible*/
 
 /* Style the button that is used to open and close the collapsible content */
@@ -103,15 +137,3 @@ button {
   overflow: hidden;
   background-color: #f1f1f1;
 }
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
