--- a/index.css
+++ b/index.css
@@ -28,9 +28,9 @@ small { font-size: 0.833em; }
 }
 
 input[type=text] {
-  padding: .5rem 2rem;
-  width: 20rem;
-  margin: 1rem 1rem 3rem;
+  padding: .5em 2em;
+  width: 25em;
+  margin: 1em 1em 3em;
   border-top: none;
   border-right: none;
   border-left:none;
@@ -83,32 +83,54 @@ button {
 /*// Small devices (landscape phones, 576px and up)*/
 @media (max-width: 576px) { 
 
-/*  html {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.2em;
-  color: #5a6175;
-  background: url(background.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+  h1 {
+    font-size: 1.75em;
   }
 
-  h1 {
-    font-size: 3em;
-    /*margin-bottom: 0;*/
-  }*/
+  body {
+      margin-top: 10%;
+      margin-right: 10%;
+      margin-left: 10%;
+  }
 
+  .white-bg {
+    border-radius: 5px;
+    margin-top: 2%;
+    padding: 5% 10% 6%;
+  }
+
+  #control {
+    width: 70%;
+    padding: none;
+  }
 }
 
 /*// Medium devices (tablets, 768px and up)*/
-@media (max-width: 768px) { ... }
+@media (max-width: 768px) { 
+  body {
+      margin-top: 15%;
+      margin-right: 10%;
+      margin-left: 10%;
+  }
+
+  #control {
+    width: 50%;
+    padding: none;
+  } 
+}
 
 /*// Large devices (desktops, 992px and up)*/
 @media (max-width: 992px) { ... }
 
 /*// Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) { ... }
+@media (min-width: 1200px) { 
+  body {
+      margin-top: 5%;
+      margin-right: 30%;
+      margin-left: 30%;
+  }
+
+}
 
 /*Collapsible*/
 
